# Dare-Ezekiel-Technical-Assessment-for-AI-ML-Engineers---Cybersecurity-Training-Platform

./: .gitignore  README.md  hello.py  pyproject.toml
ai_avatar/: README.md  requirements.txt
ai_avatar/app/: cli.py  main.py
ai_avatar/app/controllers/: animation_controller.py
ai_avatar/app/core/: config.py
ai_avatar/app/models/: requests.py  responses.py
ai_avatar/app/services/: sadtalker_service.py  whisper_service.py
data/uploads/: sample_data.json
finetuning/: config.py  dockerfile.txt  main_app.py  project-structure.md  readme-md.md
finetuning/models/: ml_models.py
finetuning/routers/: inference.py  training.py
finetuning/schemas/: request_schemas.py
finetuning/services/: model_service.py  training_service.py
finetuning/utils/: preprocessing.py
graphrag/: README.md  requirements.txt
graphrag/app/: initialize_kb.py  main.py  query.py  query_script.py
graphrag/app/kb/: graph_db.py  vector_db.py
graphrag/data/: cybersec_concepts.json  cybersec_relations.json
llm_finetuning/: README.md  config.py  main.py  requirements-txt.txt  requirements.txt
llm_finetuning/app/: main.py
llm_finetuning/app/api/: routes.py
llm_finetuning/app/core/: config.py
llm_finetuning/app/models/: request_models.py  response_models.py
llm_finetuning/app/services/: auth_service.py  model_service.py
llm_finetuning/models/: ml-models.py
llm_finetuning/routers/: inference.py  training.py
llm_finetuning/schemas/: request-schemas.py
llm_finetuning/services/: model-service.py  training-service.py
llm_finetuning/utils/: preprocessing.py
(+1 files in other folders)
