[project]
name = "dare-ezekiel-technical-assessment-for-ai-ml-engineers-cybersecurity-training-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "aiofiles>=24.1.0",
    "bitsandbytes>=0.45.4",
    "click>=8.1.8",
    "datasets>=3.5.0",
    "faiss-cpu>=1.10.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "huggingface-hub>=0.30.1",
    "neo4j>=5.28.1",
    "numpy>=2.2.4",
    "openai>=1.70.0",
    "pandas>=2.2.3",
    "peft>=0.15.1",
    "pillow>=11.1.0",
    "pydantic>=2.11.2",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "scipy>=1.15.2",
    "sentence-transformers>=4.0.2",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.50.3",
    "trl>=0.16.1",
    "uvicorn>=0.34.0",
]
